fix alignment

--- a/src/components/JudgeSection.scss
+++ b/src/components/JudgeSection.scss
@@ -261,7 +261,7 @@
     display: flex !important;
     margin: 20px auto !important;
     .details {
-      text-align: right;
+      text-align: left;
     }
   }
 }
